# copycat

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile  Makefile  changelog.rst  conf.py  index.rst  introduction.rst
examples/: CMakeLists.txt  exact_ltl.cpp  read_trace.cpp  shayan.cpp  simulate.cpp
include/: CMakeLists.txt
include/copycat/: copycat.hpp  dag.hpp  ltl.hpp  obligation_set.hpp  print.hpp  protocol_extractor.hpp  trace.hpp  waveform.hpp
include/copycat/algorithms/: exact_ltl_pdag_encoder.hpp  exact_ltl_traits.hpp  ltl_evaluator.hpp  ltl_learner.hpp  ltl_pdag_learner.hpp  sequential_simulation.hpp
include/copycat/chain/: chain.hpp  print.hpp
include/copycat/generators/: waveform_generator.hpp
include/copycat/io/: ltl.hpp  ltl_formula_reader.hpp  ltl_synthesis_spec_reader.hpp  traces.hpp
include/copycat/logic/: bool3.hpp  bool5.hpp
include/copycat/utils/: extended_inttype.hpp  ltl_operators.hpp  ltl_shorthands.hpp  read_json.hpp  stopwatch.hpp  string_utils.hpp
lib/: CMakeLists.txt
lib/bill/: CMakeLists.txt
lib/bill/include/bill/sat/: solver.hpp  tseytin.hpp  types.hpp
lib/mockturtle/include/mockturtle/: traits.hpp
lib/mockturtle/include/mockturtle/algorithms/: simulation.hpp
lib/mockturtle/include/mockturtle/io/: write_verilog.hpp
lib/mockturtle/include/mockturtle/networks/: aig.hpp
lib/percy.old/include/percy/: partial_dag.hpp
lib/percy/include/percy/: dag.hpp  partial_dag.hpp  tt_utils.hpp
test/: CMakeLists.txt  chain.cpp  dag.cpp  ltl.cpp  obligation_set.cpp  simple.cpp
test/algorithms/: ltl_evaluator.cpp  ltl_learner.cpp  sequential_simulation.cpp
test/logic/: bool3.cpp  bool5.cpp
test/utils/: extended_inttype.hpp
